# KnowledgeCurator

./: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.base.json
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/desktop/electron/: dev-electron-controller.test.ts  dev-env.test.ts  main.ts  preload.ts  quick-capture-ipc.test.ts  quick-capture-ipc.ts  quit-state.test.ts  quit-state.ts  screenshot.ts  shell-config.ts  shortcuts.test.ts  shortcuts.ts  tray.ts  windows.ts
apps/desktop/scripts/: build-electron.mjs  dev-electron-controller.d.ts  dev-electron-controller.js  dev-env.d.ts  dev-env.js  dev.mjs
backend/: README.md  __init__.py
backend/app/: __init__.py  config.py  db.py  dependencies.py  errors.py  main.py  qa_eval_cli.py  retrieval_eval_cli.py  utils.py
backend/app/graphs/: __init__.py  report_graph.py  report_nodes.py  report_state.py  summary_graph.py  summary_item_graph.py  summary_nodes.py  summary_state.py
backend/app/routers/: config.py  health.py  parse_results.py  pdf_drafts.py  pdf_parse.py  pool.py  qa.py  quick_capture.py  report.py  results.py  retrieval.py  runs.py  summary.py  web_drafts.py  web_session_profiles.py
backend/app/schemas/: config.py  evidence.py  health.py  parse_results.py  pdf_drafts.py  pdf_parse.py  pool.py  qa.py  quick_capture.py  report.py  results.py  retrieval.py  runs.py  (+2 more)
backend/tests/: conftest.py  test_db.py
scripts/: manual-smoke-test.ps1  run-qa-eval.ps1  run-retrieval-eval.ps1  start-backend.ps1
(+189 files in other folders)
