[project]
name = "knowledge-curator"
version = "0.1.0"
description = "Minimal backend environment for Knowledge Curator."
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12,<5.0",
    "fastapi>=0.115,<1.0",
    "httpx>=0.27,<1.0",
    "langgraph>=0.2,<0.5",
    "opencv-python>=4.13,<5.0",
    "onnxruntime>=1.24,<2.0",
    "pydantic>=2.7,<3.0",
    "playwright>=1.54,<2.0",
    "pymupdf>=1.25,<2.0",
    "pymupdf4llm>=0.0.17,<1.0",
    "pypdf>=5.1,<6.0",
    "qdrant-client>=1.11,<2.0",
    "rapidocr==2.0.6",
    "uvicorn>=0.30,<1.0",
]

[dependency-groups]
test = [
    "httpx>=0.27,<1.0",
    "pytest>=8.2,<9.0",
]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
